--- a/main.css
+++ b/main.css
@@ -1,4 +1,12 @@
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
+.container {
+    border: 1px solid black;
+    width: 70%;
+    margin: 0 auto;
 }
