--- a/main.css
+++ b/main.css
@@ -9,4 +9,15 @@ body{
     border: 1px solid black;
     width: 70%;
     margin: 0 auto;
+    padding: 0;
+}
+
+header{
+    text-align: left;
+    background-color: blue;
+    box-shadow: 1px 1px 3px black;
+    margin: 0;
+    width: 100%;
+    height: 40px;
+    color: white;
 }
